# Dynamic-OS

./: CMakeLists.txt  DynamicOS_UI_Prototype.sln  Oscyra  README.md  Teaser  Teaser.txt
DynamicOS_UI_Prototype/: AdvancedWindow.xaml  AdvancedWindow.xaml.cs  App.xaml  App.xaml.cs  AppConfig.cs  DeleteAppPage.xaml  DeleteAppPage.xaml.cs  DynamicOS_UI_Prototype.csproj  FileExplorerPage.xaml  FileExplorerPage.xaml.cs  HomeScreen.xaml  HomeScreen.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ManageAppPage.xaml  ManageAppPage.xaml.cs  ManageAppsPage.xaml  ManageAppsPage.xaml.cs  ManageAppsWindow.xaml  ManageAppsWindow.xaml.cs  NativeMethods.cs  SettingWindow.xaml  SettingWindow.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs  SimpleModeMainWindow.xaml  SimpleModeMainWindow.xaml.cs  SimpleModeMockup.xaml  SimpleModeMockup.xaml.cs  SimpleModePreview.xaml  SimpleModePreview.xaml.cs  SimpleWindow.xaml  SimpleWindow.xaml.cs  SlimModePreview.xaml  SlimModePreview.xaml.cs  SplashScreen.xaml  SplashScreen.xaml.cs  customwindow.xaml  customwindow.xaml.cs
GUI/UI/: MainWindow.cpp  MainWindow.h
GUI/UI/Button/Dashboard/: Dashboard.cpp
OS/boot/: Makefile  boot64.S  bootloader.c  bootloader.h  graphics.c  memory.c
OS/linker/: bootloader.ld
Root/: main.cpp
UI/: MainWindow.cpp  MainWindow.h  UIEffects.cpp  UIEffects.h
UI/Button/Apps/: Apps.cpp  Apps.h
UI/Button/Apps/Manageapp/: Manageapp.cpp  Manageapp.h
publish/: DynamicOS_UI_Prototype.application
publish/Application Files/DynamicOS_UI_Prototype_1_0_0_0/: DynamicOS_UI_Prototype.dll.manifest  Launcher.exe.deploy
update/: Oscyra
